# Andromeda

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  filesystem.rs  main.rs  note.rs  opts.rs
src/graph/: mod.rs
src/note_collection/: mod.rs
src/note_collection/graph/: mod.rs
src/view/: mod.rs
