[package]
name = "andromeda"
version = "0.1.0"
authors = ["Pedro Burgos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.7.3"
itertools = "0.10.0"
anyhow = "1.0"
symlink = "0.1.0"
toml = "0.5.8"
structopt = "0.3.21"